--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,8 +16,9 @@ EMAIL_SERVICE=gmail
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_SECURE=false
-EMAIL_USER=your_email@gmail.com
+EMAIL_USER=name.regno@vitbhopal.ac.in
 EMAIL_PASS=your_app_password
+EMAIL_FROM=name.regno@vitbhopal.ac.in
 
 # Frontend URL
 CLIENT_URL=https://vit-campus-connect.vercel.app
@@ -25,3 +26,4 @@ CLIENT_URL=https://vit-campus-connect.vercel.app
 # Google OAuth (Optional)
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_CALLBACK_URL=https://vit-campus-connect-production.up.railway.app/api/auth/google/callback
